...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZKr-Mb-0wC" customClass="DLTextField" customModule="DLTextField" customModuleProvider="target">
                                <rect key="frame" x="16" y="60" width="150" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Text1"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="150" id="XlF-TT-lV3"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z0Q-2a-hmY" customClass="DLTextField" customModule="DLTextField" customModuleProvider="target">
                                <rect key="frame" x="16" y="110" width="150" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Text2"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="7JV-OY-zw8"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2d-DI-zMB" customClass="DLLabel" customModule="DLTextField" cu
                                <rect key="frame" x="174" y="115" width="185" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="Label2"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="fkX-zW-Hi0"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shX-ar-WQl" customClass="DLLabel" customModule="DLTextField" cu
                                <rect key="frame" x="16" y="177" width="343" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="Label3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="Dj4-tr-hWB"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BZX-oZ-NjQ" customClass="DLLabel" customModule="DLTextField" cu
                                <rect key="frame" x="16" y="213" width="343" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="Label4"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="M1x-Dk-dLU"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STe-vL-UWI" customClass="DLLabel" customModule="DLTextField" cu
                                <rect key="frame" x="16" y="249" width="343" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="Label5"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="mNa-sI-uK9"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7KT-h3-tjD" customClass="DLLabel" customModule="DLTextField" cu
                                <rect key="frame" x="16" y="287" width="343" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="Label6"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="gma-lt-kDd"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efY-oJ-4k9" customClass="DLLabel" customModule="DLTextField" cu
                                <rect key="frame" x="174" y="66" width="185" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="Label1"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="gXr-Ne-Uoi"/>
...
